tests/macros/tests/ui/err/properties-missing-braces.stderr
error: expected curly braces
 --> tests/ui/err/properties-missing-braces.rs:3:22
  |
3 | #[trace(properties = "key")]
  |                      ^^^^^
