tests/macros/tests/ui/err/properties-missing-braces.rs
use fastrace::trace;

#[trace(properties = "key")]
fn f() {}

fn main() {}
